--- a/bims/templates/map_page/map-templates.html
+++ b/bims/templates/map_page/map-templates.html
@@ -111,19 +111,6 @@
         </div>
         <div class="row sub-filter">
             <div class="col-lg-12 subtitle">
-                {{ spatial_scale_title }} <i class="fa fa-angle-up pull-right filter-icon-arrow"></i><i class="fa fa-angle-down pull-right filter-icon-arrow"></i>
-            </div>
-        </div>
-        <div class="row" style="display: none">
-            <div class="col-lg-12 filter-content" id="filter-catchment-area">
-            </div>
-            <div class="button-filter-wrapper">
-                <button class="apply-filter">Apply Filter</button>
-                <button class="clear-filter">Clear Filter</button>
-            </div>
-        </div>
-        <div class="row sub-filter">
-            <div class="col-lg-12 subtitle">
                 ORIGINS <i class="fa fa-angle-up pull-right filter-icon-arrow"></i><i class="fa fa-angle-down pull-right filter-icon-arrow"></i>
             </div>
         </div>
@@ -183,10 +170,6 @@
         </div>
         {% endif %}
 
-        {% if use_reference_category %}
-        <div class="reference-category-wrapper"></div>
-        {% endif %}
-
         <div class="row sub-filter">
             <div class="col-lg-12 subtitle">
                 {{ collector_title }} <i class="fa fa-angle-up pull-right filter-icon-arrow"></i><i class="fa fa-angle-down pull-right filter-icon-arrow"></i>
@@ -200,6 +183,11 @@
                 <button class="clear-filter">Clear Filter</button>
             </div>
         </div>
+
+        {% if use_reference_category %}
+        <div class="reference-category-wrapper"></div>
+        {% endif %}
+
     </div>
 </script>
 
@@ -258,14 +246,53 @@
                 </div>
             </div>
         </div>
-        <div class="row content">
-            <button id="spatial-filter-panel-upload">Upload New Boundary</button>
+        <div class="row sub-filter content spatial-scale-menu">
+            <div class="col-lg-12 subtitle">
+                 {{ spatial_scale_title }} <i class="fa fa-angle-up pull-right filter-icon-arrow"></i><i class="fa fa-angle-down pull-right filter-icon-arrow"></i>
+            </div>
         </div>
-        <div class="row boundary-list">
+        <div class="row spatial-scale-panel" style="display: none">
+            <div class="small-subtitle">Political Region</div>
+            <div class="col-lg-12 filter-content" id="spatial-scale-container">
+            </div>
+            <div class="col-lg-12 other-filters">
+                <div class="container-fluid row">
+                    <div class="col-lg-5">Ecoregion</div>
+                    <div class="col-lg-7">
+                        <select disabled>
+                            <option value="">Ecoregion</option>
+                        </select>
+                    </div>
+                </div>
+                <div class="container-fluid row">
+                    <div class="col-lg-5">Catchment</div>
+                    <div class="col-lg-7">
+                        <select disabled>
+                            <option value="">Catchment</option>
+                        </select>
+                    </div>
+                </div>
+            </div>
+            <div class="spatial-scale-action">
+                <button class="spatial-scale-apply-filter" disabled>Apply Filter</button>
+                <button class="spatial-scale-clear-filter" disabled>Clear Filter</button>
+            </div>
         </div>
-        <div class="row boundary-action">
-            <button class="spatial-apply-filter">Apply Filter</button>
-            <button class="spatial-clear-filter">Clear Filter</button>
+        <div class="row sub-filter">
+            <div class="col-lg-12 subtitle">
+                 USER BOUNDARY <i class="fa fa-angle-up pull-right filter-icon-arrow"></i><i class="fa fa-angle-down pull-right filter-icon-arrow"></i>
+            </div>
+        </div>
+        <div class="user-boundary-panel" style="display: none">
+            <div class="row spatial-filter-panel-upload-wrapper">
+                <button id="spatial-filter-panel-upload">Upload New Boundary</button>
+            </div>
+            <div class="row boundary-list">
+            </div>
+            <div class="row boundary-action">
+                <button class="spatial-apply-filter">Apply Filter</button>
+                <button class="spatial-clear-filter">Clear Filter</button>
+            </div>
         </div>
     </div>
 
