Change neutral to natural

--- a/bims/templates/map_page/map-templates.html
+++ b/bims/templates/map_page/map-templates.html
@@ -132,7 +132,7 @@
         <div class="row ecological-condition" style="display: none;"  data-toggle="tooltip" data-placement="top" title="Coming Soon">
             <div class="row col-lg-12">
                 <div class="col-lg-4 neutral">
-                    Neutral (N)
+                    Natural (N)
                 </div>
                 <div class="col-lg-4 good">
                     Good (G)
