--- a/bims/templates/map_page/bims.html
+++ b/bims/templates/map_page/bims.html
@@ -24,6 +24,8 @@
         const geocontextCollectionKey = '{{ geocontext_collection_key }}';
         const locationSiteDetailURL = '{% url "location-site-detail" 123456789 %}';
         const listCollectorAPIUrl = '{% url "list-collector" %}';
+        const listReferenceAPIUrl = '{% url "list-reference" %}';
+        const isUsingReferenceFilter = "{% if use_reference_filter %} true {% else %} false {% endif %}";
         const centerPointMap = '{{ center_point_map }}';
         const listCategoryAPIUrl = '{% url "list-date-category" %}';
         const listBoundaryAPIUrl = '{% url "list-boundary" %}';
@@ -40,7 +42,6 @@
         const bimsInfoContent = {% if flatpage %} true {% else %} false {% endif %};
         const isHealthyrivers = {% if is_healthyrivers %} true {% else %} false {% endif %}
         const ogcServerDefaultLocation = "{{ OGC_SERVER.default.PUBLIC_LOCATION }}";
-        const useReferenceCategory = "{% if use_reference_category %} true {% else %} false {% endif %}";
         const userCanValidate = "{% if can_validate %} true {% else %} false {% endif %}";
     </script>
     {% block extra_head %}
