--- a/bims/templates/map_page/map-templates.html
+++ b/bims/templates/map_page/map-templates.html
@@ -172,7 +172,7 @@
 
         <div class="row sub-filter">
             <div class="col-lg-12 subtitle">
-                {{ collector_title }} <i class="fa fa-angle-up pull-right filter-icon-arrow"></i><i class="fa fa-angle-down pull-right filter-icon-arrow"></i>
+                COLLECTOR <i class="fa fa-angle-up pull-right filter-icon-arrow"></i><i class="fa fa-angle-down pull-right filter-icon-arrow"></i>
             </div>
         </div>
         <div class="row" style="display: none">
@@ -184,9 +184,24 @@
             </div>
         </div>
 
-        {% if use_reference_category %}
+        <div class="study-reference-wrapper">
+            <div class="row sub-filter">
+                <div class="col-lg-12 subtitle">
+                    STUDY REFERENCE <i class="fa fa-angle-up pull-right filter-icon-arrow"></i><i class="fa fa-angle-down pull-right filter-icon-arrow"></i>
+                </div>
+            </div>
+            <div class="row" style="display: none">
+                <div class="col-lg-12 filter-content" id="filter-study-reference">
+                </div>
+                <div class="button-filter-wrapper">
+                    <button class="apply-filter">Apply Filter</button>
+                    <button class="clear-filter">Clear Filter</button>
+                </div>
+            </div>
+        </div>
+
         <div class="reference-category-wrapper"></div>
-        {% endif %}
+
 
     </div>
 </script>
