--- a/bims/templates/map_page/map-templates.html
+++ b/bims/templates/map_page/map-templates.html
@@ -467,6 +467,7 @@
                         Please enter the decimal latitude (positive
                         degrees North) and longitude (positive degrees
                         East) coordinates of your area of interest below!
+                        <br/> <br/> e.g. for Cape Town being -33.xxx 19.xxx
                     </p>
                     <p class="farm-form">
                         Please enter the Farm/Farm Portion ID below (e.g. T0KT00000000001600005)
