Reduce search response size

--- a/bims/templates/map_page/map-templates.html
+++ b/bims/templates/map_page/map-templates.html
@@ -731,7 +731,7 @@
 
 <script type="text/template" id="search-result-taxa-template">
     <div class="result-search" data-search-result-id="" data-taxon-id="<%= id %>">
-        <p class="group-title"><%= highlighted_common_name %></p>
+        <p class="group-title"><%= highlight %></p>
         <a class="group-description"><%= count %> occurrences</a>
     </div>
 </script>
@@ -739,7 +739,7 @@
 <script type="text/template" id="search-result-site-template">
     <div class="result-search" data-search-result-id="">
         <p class="group-title"><%= name %></p>
-        <a class="group-description"><%= count %> records found</a>
+        <a class="group-description"><%= count %> occurrences</a>
     </div>
 </script>
 
