--- a/bims/templates/map_page/bims.html
+++ b/bims/templates/map_page/bims.html
@@ -43,6 +43,7 @@
         const isHealthyrivers = {% if is_healthyrivers %} true {% else %} false {% endif %}
         const ogcServerDefaultLocation = "{{ OGC_SERVER.default.PUBLIC_LOCATION }}";
         const userCanValidate = "{% if can_validate %} true {% else %} false {% endif %}";
+        var filterParameters = {};
     </script>
     {% block extra_head %}
 
