--- a/bims/templates/map_page/map-templates.html
+++ b/bims/templates/map_page/map-templates.html
@@ -780,6 +780,26 @@
             <i class="fa fa-arrow-down"></i><br>
             <%= species %>
         </div>
+        <div class="origin-info">
+             <div class="row">
+                <div class="col-lg-5">
+                   ORIGIN
+                </div>
+                <div class="col-lg-7">
+                    : <%= origin %>
+                </div>
+            </div>
+        </div>
+        <div class="endemism-info">
+            <div class="row">
+                <div class="col-lg-5">
+                    ENDEMISM
+                </div>
+                <div class="col-lg-7">
+                    : <%= endemism %>
+                </div>
+            </div>
+        </div>
     </div>
 </script>
 
