Easily change site title

--- a/bims/templates/_layouts/base.html
+++ b/bims/templates/_layouts/base.html
@@ -1,7 +1,7 @@
 {% extends 'main_base.html' %}
 {% load static from staticfiles %}
 
-{% block title %}
+{% block subtitle %}
     Bibliography
 {% endblock %}
 
