--- a/bims/templates/account/login.html
+++ b/bims/templates/account/login.html
@@ -3,7 +3,7 @@
 {% load account socialaccount %}
 {% load static from staticfiles %}
 
-{% block title %}Login{% endblock %}
+{% block subtitle %}Login{% endblock %}
 
 {% block head %}
     <!-- Chosen library -->
