--- a/bims/templates/account/verification_sent.html
+++ b/bims/templates/account/verification_sent.html
@@ -3,6 +3,7 @@
 {% load account socialaccount %}
 
 {% block css_head %}
+    <title> {{ APPLICATION_NAME }} | Verification Sent </title>
     <!-- Chosen library -->
     <link rel="stylesheet" href="{% static 'chosen/chosen.min.css' %}">
     <link rel="stylesheet" href="{% static 'css/form.css' %}">
