--- a/bims/templates/account/logout.html
+++ b/bims/templates/account/logout.html
@@ -3,6 +3,7 @@
 {% load account socialaccount %}
 
 {% block css_head %}
+    <title> {{ APPLICATION_NAME }} | Logout </title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.css" rel="stylesheet" type="text/css" media="screen, projection" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
