--- a/bims/templates/contactus/contact.html
+++ b/bims/templates/contactus/contact.html
@@ -2,7 +2,7 @@
 {% load static from staticfiles %}
 {% load i18n %}
 
-{% block title %}
+{% block subtitle %}
     Contact Us
 {% endblock %}
 {% block head %}
