--- a/bims/templates/main_base.html
+++ b/bims/templates/main_base.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=0">
     <meta name="description" content="">
     <meta name="author" content="">
-    <title>{% block title %} Django BIMS | {% block subtitle %}{% endblock %} {% endblock %}</title>
+    <title>{% block title %} {{ APPLICATION_NAME }} | {% block subtitle %}{% endblock %} {% endblock %}</title>
 
     <link href="{% static "js/libs/bootstrap-4.0.0/css/bootstrap.min.css" %}" rel="stylesheet">
     <link href="{% static "js/libs/font-awesome/css/font-awesome.min.css" %}" rel="stylesheet">
