Update locate texts

--- a/bims/templates/map_page/map-templates.html
+++ b/bims/templates/map_page/map-templates.html
@@ -437,13 +437,11 @@
         <div class="row content">
             <ul id="locate-options" style="width:100%">
                 <li class="locate-coordinates">
-                    Locate by coordinate
+                    Locate by Coordinate
                 </li>
                 <li class="locate-farm">
-                    Locate by Farm/Farm Portion Code Page
+                    Locate by Farm Portion Code
                 </li>
-                {#                                        Will be implemented in another PR #}
-                {#                    <li id="map-navigation">Map navigation page</li>#}
             </ul>
         </div>
     </div>
@@ -507,6 +505,10 @@
                             </div>
                         </div>
                     </form>
+
+                    <div class="alert alert-danger" role="alert" style="display: none;">
+                    </div>
+
                 </div>
             </div>
         </div>
