--- a/bims/templates/map_page/map-templates.html
+++ b/bims/templates/map_page/map-templates.html
@@ -15,9 +15,9 @@
     <div class="ol-control" id="taxon-filter">
     </div>
     <div id="popup"></div>
-    <div id="map-legend-wrapper" class="control-drop-shadow show-legend" data-toggle="tooltip" data-placement="bottom" title="Show legends">
+    <div id="map-legend-wrapper" class="control-drop-shadow hide-legend" data-toggle="tooltip" data-placement="bottom" data-original-title="Show legends">
         <div id="map-legend-symbol">L</div>
-        <div id="map-legend"></div>
+        <div id="map-legend" style="display: none"></div>
     </div>
 </script>
 <script type='text/html' id='side-panel-template'>
