--- a/bims/templates/main_base.html
+++ b/bims/templates/main_base.html
@@ -33,133 +33,7 @@
 
 {% block navigation %}
     <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
-        <div class="container">
-            <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target=".navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-                Menu
-            </button>
-            <div class="collapse navbar-collapse navbarResponsive">
-                <ul class="navbar-nav">
-                    <li class="dropdown">
-                        <div class="btn" id="menu-dropdown-burger" data-toggle="dropdown">
-                            <i class="fa fa-reorder user-icon"></i>
-                        </div>
-                        <div class="dropdown-menu dropdown-menu-left" aria-labelledby="menu-dropdown-burger">
-                            <a class="dropdown-item" href="/">HOME</a>
-                            <a class="dropdown-item" href="/map">MAP</a>
-                            <a class="dropdown-item" id="navbar-ext-resources" href="{% url 'link_list' %}">LINKS</a>
-                            <a class="dropdown-item" href="/tracking/">SITE
-                                STATISTICS</a>
-                            <a class="dropdown-item" id="navbar-doc-report" href="/documents/">DOCUMENTS & REPORTS</a>
-                            <a class="dropdown-item" id="navbar-contact" href="/contact/">CONTACT</a>
-                            <a class="dropdown-item" id="navbar-biblio" href="/bibliography/">BIBLIOGRAPHY</a>
-                             {% if user.is_authenticated %}
-                                 <div class="dropdown-divider"></div>
-                                <a class="dropdown-item" id="navbar-geonode" href="/layers">GIS CATALOGUE</a>
-                            {% endif %}
-                        </div>
-                    </li>
-                </ul>
-            </div>
-            <div class="collapse navbar-collapse navbarResponsive" id="navbarResponsive">
-                <ul class="navbar-nav ml-auto">
-                    <li class="dropdown">
-                        <div class="btn" id="menu-dropdown-account" data-toggle="dropdown" href="#">
-                            <i class="fa fa-user user-icon"></i>
-                        </div>
-                        <div class="dropdown-menu right-nav-dropdown" aria-labelledby="menu-dropdown-account">
-                            {% if user.is_authenticated %}
-                                <a class="dropdown-item" id="navbar-profile" href="/profile/">PROFILE</a>
-                                <a class="dropdown-item" id="navbar-upload" href="{% block upload_data_url %}/upload/{% endblock %}">UPLOAD DATA</a>
-                                {% if user.is_staff or user.is_superuser %}
-                                    <a class="dropdown-item" href="/admin/">ADMINISTRATION</a>
-                                {% endif %}
-                                <a class="dropdown-item" href="/nonvalidated-user-list/">UPDATE RECORDS</a>
-                                <div class="dropdown-divider"></div>
-                                <a class="dropdown-item" href="/accounts/logout/"><i class="fa fa-sign-out"></i> LOGOUT</a>
-                            {% else %}
-                                <a class="dropdown-item" href="/accounts/login/"><i class="fa fa-sign-in"></i> LOGIN</a>
-                                <a class="dropdown-item" href="/accounts/signup/">SIGN UP</a>
-                            {% endif %}
-                        </div>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-
-    <script>
-
-        var dropdownCloseButtons = document.getElementsByClassName("close-dropdown");
-
-        for(var i = 0; i < dropdownCloseButtons.length; i++) {
-            dropdownCloseButtons[i].onclick = function () {
-                var dropdownMenu = document.getElementsByClassName("dropdown-menu");
-                for(var j = 0; j < dropdownMenu.length; j++) {
-                    dropdownMenu[j].classList.remove("show");
-                }
-            }
-        }
-
-        var uploadUrl = '{{ upload_url }}';
-        var extResourceUrl = '{{ ext_resource_url }}';
-        var docReportUrl = '{{ doc_report_url }}';
-        var contactUrl = '{{ contact_url }}';
-        var biblioUrl = '{{ biblio_url }}';
-        var profileUrl = '{{ profile_url }}';
-        var contributionsUrl = '{{ contributions_url }}';
-        var titleAbbr = '{{ title_bims_abbr }}';
-        var titleLong = '{{ title_bims_long|safe }}';
-
-        if(uploadUrl !== 'None'){
-            var navbarUpload = document.getElementById("navbar-upload");
-            if(navbarUpload) {
-                navbarUpload.href = uploadUrl;
-            }
-        }
-
-        if(extResourceUrl !== 'None'){
-            var navbarExt = document.getElementById("navbar-ext-resources");
-            navbarExt.href = extResourceUrl;
-        }
-
-        if(docReportUrl !== 'None'){
-            var navbarDoc = document.getElementById("navbar-doc-report");
-            navbarDoc.href = docReportUrl;
-        }
-
-        if(contactUrl !== 'None'){
-            var navbarContact = document.getElementById("navbar-contact");
-            navbarContact.href = contactUrl;
-        }
-
-        if(biblioUrl !== 'None'){
-            var navbarBiblio = document.getElementById("navbar-biblio");
-            navbarBiblio.href = biblioUrl;
-        }
-
-        if(profileUrl !== 'None'){
-            var navbarProfile = document.getElementById("navbar-profile");
-            if(navbarProfile) {
-                navbarProfile.href = profileUrl;
-            }
-        }
-
-        if(contributionsUrl !== 'None'){
-            var navbarContributions = document.getElementById("navbar-contributions");
-            navbarContributions.href = contributionsUrl;
-        }
-
-        if(titleAbbr !== 'None'){
-            $(".bims-title-big").html(titleAbbr);
-        }
-
-        if(titleLong !== 'None'){
-            $('.bims-title-acc').html(titleLong);
-        }
-
-    </script>
-
+    {% include 'navigation_bar.html' %}
 {% endblock %}
 
 {% block body_content %} {% endblock %}
