Option to remove collector filter

--- a/bims/templates/map_page/map-templates.html
+++ b/bims/templates/map_page/map-templates.html
@@ -170,6 +170,8 @@
         </div>
         {% endif %}
 
+
+        {% if COLLECTOR_FILTER %}
         <div class="row sub-filter">
             <div class="col-lg-12 subtitle">
                 COLLECTOR <i class="fa fa-angle-up pull-right filter-icon-arrow"></i><i class="fa fa-angle-down pull-right filter-icon-arrow"></i>
@@ -183,6 +185,7 @@
                 <button class="clear-filter">Clear Filter</button>
             </div>
         </div>
+        {% endif %}
 
         <div class="study-reference-wrapper">
             <div class="row sub-filter">
