--- a/bims/static/css/map.css
+++ b/bims/static/css/map.css
@@ -1093,6 +1093,7 @@ div:hover::-webkit-scrollbar {
 .upload-data-button {
     border-radius: 8px !important;
     width: 100%;
+    font-size: 9pt;
 }
 
 .required-text {
@@ -1161,6 +1162,38 @@ div:hover::-webkit-scrollbar {
 
 .modal-upload-data {
     z-index: 9999;
+    font-size: 10pt;
+}
+
+.modal-upload-data label, .modal-upload-data input {
+    font-size: 10pt !important;
+}
+
+.modal-upload-data h5 {
+    padding-top: 4px;
+    font-size: 12pt;
+}
+
+.modal-upload-data .modal-header {
+    padding-bottom: 5px !important;
+    padding-top: 5px !important;
+}
+
+.modal-upload-data .modal-body {
+    padding-left: 0;
+    padding-right: 0;
+}
+
+.upload-body-form {
+    padding-left: 15px;
+    padding-right: 15px;
+    max-height: 500px;
+    overflow-y: auto;
+}
+
+.upload-body-button {
+    padding-left: 15px;
+    padding-right: 15px;
 }
 
 #search-error-text {
@@ -1314,7 +1347,7 @@ div:hover::-webkit-scrollbar {
 }
 
 .small-close span {
-    font-size: 25pt;
+    font-size: 20pt;
 }
 
 .close-info-popup {
