--- a/bims/static/css/base.css
+++ b/bims/static/css/base.css
@@ -72,6 +72,11 @@ h6 {
   -moz-transition: all 0.2s;
   transition: all 0.2s;
   padding-top: 15px;
+  pointer-events: auto;
+}
+
+.modal {
+  overflow: auto;
 }
 
 #mainNav .navbar-brand {
