--- a/bims/templates/flatpages/default.html
+++ b/bims/templates/flatpages/default.html
@@ -30,3 +30,13 @@
           </div>
     </section>
 {% endblock %}
+
+{% block foot %}
+
+    <!-- Plugin JavaScript -->
+    <script src="{% static "js/libs/jquery/jquery-3.3.1.min.js" %}"></script>
+    <script src="{% static "js/libs/bootstrap-4.0.0/js/bootstrap.min.js" %}"></script>
+    <script src="{% static "js/libs/chart/Chart-2.7.2.js" %}"></script>
+    <script src="{% static "js/landing-page.js" %}"></script>
+
+{% endblock %}
