--- a/bims/templates/navigation_bar.html
+++ b/bims/templates/navigation_bar.html
@@ -35,7 +35,9 @@
                     <div class="dropdown-menu right-nav-dropdown" aria-labelledby="menu-dropdown-account">
                         {% if user.is_authenticated %}
                             <a class="dropdown-item" id="navbar-profile" href="/profile/">PROFILE</a>
-                            <a class="dropdown-item" id="navbar-upload" href="{% block upload_data_url %}/upload/{% endblock %}">UPLOAD DATA</a>
+                            {% if perms.bims.can_upload_csv %}
+                                <a class="dropdown-item" id="navbar-upload" href="{% block upload_data_url %}/upload/{% endblock %}">UPLOAD DATA</a>
+                            {% endif %}
                             {% if user.is_staff or user.is_superuser %}
                                 <a class="dropdown-item" href="/admin/">ADMINISTRATION</a>
                             {% endif %}
