--- a/bims/templates/map_page/map-templates.html
+++ b/bims/templates/map_page/map-templates.html
@@ -892,6 +892,7 @@
             <button class="show-detail">Show detail</button>
             <button class="hide-detail">Hide detail</button>
             <button class="accept-data">Accept</button>
+            <button class="reject-data">Reject</button>
         </div>
         <div class="validate-data-action">
             <p>
@@ -899,6 +900,14 @@
             </p>
             <button class="accept-validate">Yes</button>
             <button class="cancel-validate">Cancel</button>
+        </div>
+        <div class="reject-data-action">
+            <p>
+                Reasons for rejection (optional)
+            </p>
+            <textarea class="rejection-message"></textarea>
+            <button class="accept-reject">Submit</button>
+            <button class="cancel-reject">Cancel</button>
         </div>
     </div>
 </script>
