Validator can edit the data

--- a/bims/templates/map_page/map-templates.html
+++ b/bims/templates/map_page/map-templates.html
@@ -893,6 +893,7 @@
             <button class="hide-detail">Hide detail</button>
             <button class="accept-data">Accept</button>
             <button class="reject-data">Reject</button>
+            <button class="edit-data">Edit Data</button>
         </div>
         <div class="validate-data-action">
             <p>
