Add contributor email in validation list

--- a/bims/templates/map_page/map-templates.html
+++ b/bims/templates/map_page/map-templates.html
@@ -874,7 +874,7 @@
                 <div class="detail-container-title"> Collection Date </div>
                 <p> <%= collection_date %> </p>
                 <div class="detail-container-title"> Uploader </div>
-                <p> <%= owner %> </p>
+                <p> <%= owner %> ( <a href="mailto:<%= owner_email %>?Subject=Question%20for%20contributor" target="_top"><%= owner_email %></a> ) </p>
             </div>
         </div>
         <div class="detail-container container">
