Fix validate and reject permission

--- a/bims/templates/email/data_rejection.html
+++ b/bims/templates/email/data_rejection.html
@@ -9,6 +9,6 @@
     <p>And the reasons for rejection:</p>
     <p>{{ reason | safe }}</p>
     <br/><br/>
-    <p><a href="{{ data-url }}">You can update your data here: {{ data_url }}</a></p>
+    <p><a href="{{ data_url }}">You can update your data here: {{ data_url }}</a></p>
 </body>
 </html>
