--- a/bims/templates/map_page/map-templates.html
+++ b/bims/templates/map_page/map-templates.html
@@ -874,7 +874,7 @@
                 <div class="detail-container-title"> Collection Date </div>
                 <p> <%= collection_date %> </p>
                 <div class="detail-container-title"> Uploader </div>
-                <p> <%= owner %> </p>
+                <p> <%= owner %> ( <a href="mailto:<%= owner_email %>?Subject=Question%20for%20contributor" target="_top"><%= owner_email %></a> ) </p>
             </div>
         </div>
         <div class="detail-container container">
@@ -892,6 +892,8 @@
             <button class="show-detail">Show detail</button>
             <button class="hide-detail">Hide detail</button>
             <button class="accept-data">Accept</button>
+            <button class="reject-data">Reject</button>
+            <button class="edit-data">Edit Data</button>
         </div>
         <div class="validate-data-action">
             <p>
@@ -899,6 +901,14 @@
             </p>
             <button class="accept-validate">Yes</button>
             <button class="cancel-validate">Cancel</button>
+        </div>
+        <div class="reject-data-action">
+            <p>
+                Reasons for rejection (optional)
+            </p>
+            <textarea class="rejection-message"></textarea>
+            <button class="accept-reject">Submit</button>
+            <button class="cancel-reject">Cancel</button>
         </div>
     </div>
 </script>
