--- a/bims/templates/map_page/map-templates.html
+++ b/bims/templates/map_page/map-templates.html
@@ -530,7 +530,7 @@
         <div class="modal-dialog modal-upload-data" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title">Upload Single Occurrence</h5>
+                    <h5 class="modal-title">Upload Single Occurrence <span class="badge ud-badge-same-site badge-info"> Capturing another record at the same site </span> </h5>
                     <button type="button" class="close small-close"
                             aria-label="Close">
                         <span aria-hidden="true">&times;</span>
@@ -563,7 +563,7 @@
                                    class="form-control mb-2 mr-sm-2 ud-item ud-item-required"
                                    id="ud_species_name" placeholder="" name="Species Name">
                             <label for="ud_location_site" class="upload-input-label">
-                                Location Site Name *
+                                Location Site Name * <button type="button" class="btn-ud-new-site btn btn-light"> Add new site for next record </button>
                             </label>
                             <input type="text"
                                    class="form-control mb-2 mr-sm-2 ud-item ud-item-required"
