--- a/bims/templates/navigation_bar.html
+++ b/bims/templates/navigation_bar.html
@@ -13,9 +13,11 @@
                         <a class="dropdown-item" href="/">HOME</a>
                         <a class="dropdown-item" href="/map">MAP</a>
                         <a class="dropdown-item" id="navbar-ext-resources" href="{% url 'link_list' %}">LINKS</a>
-                        <a class="dropdown-item" href="/tracking/">SITE
-                            STATISTICS</a>
-                        <a class="dropdown-item" id="navbar-doc-report" href="/documents/">DOCUMENTS & REPORTS</a>
+                        {% if user.is_authenticated %}
+                            <a class="dropdown-item" href="/tracking/">SITE
+                                STATISTICS</a>
+                            <a class="dropdown-item" id="navbar-doc-report" href="/documents/">DOCUMENTS & REPORTS</a>
+                        {% endif %}
                         <a class="dropdown-item" id="navbar-contact" href="/contact/">CONTACT</a>
                         <a class="dropdown-item" id="navbar-biblio" href="/bibliography/">BIBLIOGRAPHY</a>
                          {% if user.is_authenticated %}
